force-app/main/default/objects/Opportunity/fields/PMC_DH_ContactMethod__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_ContactMethod__c</fullName>
    <label>Contact Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>In Person</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>WhatsApp/SMS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>