force-app/main/default/objects/Opportunity/fields/PMC_DH_ContactPreference__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_ContactPreference__c</fullName>
    <label>Contact Preference</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>WhatsApp</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>