force-app/main/default/objects/Opportunity/fields/PMC_DH_LastContactedDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_LastContactedDate__c</fullName>
    <label>Last Contacted Date</label>
    <type>Date</type>
</CustomField>