force-app/main/default/objects/Opportunity/fields/PMC_DH_LostOtherReason__c.field-meta.xml
<CustomField>
    <fullName>PMC_DH_LostOtherReason__c</fullName>
    <label>Lost Other Reason</label>
    <type>TextArea</type>
</CustomField>