force-app/main/default/objects/Opportunity/fields/PMC_SS_Account_Sales_Office__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Account_Sales_Office__c</fullName>
    <formula>CASE(
					Account.PMC_SS_SalesOffice__c, 
&apos;410A&apos;,	&apos;410A - BR BA B2C&apos;,
&apos;411A&apos;,	&apos;411A - BIO KAM B2C&apos;,
&apos;436F&apos;,	&apos;436F - BR Espec Agricolas B&apos;,
&apos;437F&apos;,	&apos;437F - BR Espec Industriais&apos;,
&apos;433B&apos;,	&apos;433B - BR Feed B2B&apos;,
&apos;434C&apos;,	&apos;434C - BR Fertilizer B2B1&apos;,
&apos;435C&apos;,	&apos;435C - BR Fertilizer B2B2&apos;,
&apos;439L&apos;,	&apos;439L - BR Fospar&apos;,
&apos;412A&apos;,	&apos;412A - BR GO B2C&apos;,
&apos;413A&apos;,	&apos;413A - BR KAM Mega Farmer B&apos;,
&apos;414A&apos;,	&apos;414A - BR KAM Retail Norte&apos;,
&apos;415A&apos;,	&apos;415A - BR KAM Retail Sul B2&apos;,
&apos;416A&apos;,	&apos;416A - BR KAM Trader GO+MT&apos;,
&apos;417A&apos;,	&apos;417A - BR KAM Trader INT B2&apos;,
&apos;418A&apos;,	&apos;418A - BR KAM Trader MS B2C&apos;,
&apos;419A&apos;,	&apos;419A - BR Matopipa B2C&apos;,
&apos;420A&apos;,	&apos;420A - BR MG Norte B2C&apos;,
&apos;421A&apos;,	&apos;421A - BR MG Sul B2C&apos;,
&apos;422A&apos;,	&apos;422A - BR MOS OPERAÇÕES B2C&apos;,
&apos;423A&apos;,	&apos;423A - BIO NORTE B2C&apos;,
&apos;424A&apos;,	&apos;424A - BR MT Norte B2C&apos;,
&apos;425A&apos;,	&apos;425A - BR MT Oeste B2C&apos;,
&apos;426A&apos;,	&apos;426A - BR MT Sul B2C&apos;,
&apos;427A&apos;,	&apos;427A - BR Pastagem B2C&apos;,
&apos;428A&apos;,	&apos;428A - BR PR/SC 1 B2C&apos;,
&apos;429A&apos;,	&apos;429A - BR PR/SC 2 B2C&apos;,
&apos;430A&apos;,	&apos;430A - BR RS B2C&apos;,
&apos;433A&apos;,	&apos;433A - BR RS / SC B2C&apos;,
&apos;431A&apos;,	&apos;431A - BR SP Norte B2C&apos;,
&apos;432A&apos;,	&apos;432A - BR SP Sul B2C&apos;,
&apos;200G&apos;,	&apos;200G - CA All Canpotex&apos;,
&apos;200H&apos;,	&apos;200H - CA All Services&apos;,
&apos;459C&apos;,	&apos;459C - PE Itermediate Sales&apos;,
&apos;458C&apos;,	&apos;458C - PE Latam&apos;,
&apos;460C&apos;,	&apos;460C - Iris Milane PY&apos;,
&apos;438A&apos;,	&apos;438A - PY KAM Trader PY B2C&apos;,
&apos;461C&apos;,	&apos;461C - BIO SUD/SUL B2C&apos;,
&apos;100J&apos;,	&apos;100J - US All Co-Products&apos;,
&apos;100I&apos;,	&apos;100I - US All International&apos;,
&apos;100H&apos;,	&apos;100H - US All Services&apos;,
&apos;100E&apos;,	&apos;100E - US All Raw Materials&apos;,
&apos;300B&apos;,	&apos;300B - US and CA All Feed&apos;,
&apos;300D&apos;,	&apos;300D - US and CA All Industrial&apos;,
&apos;303C&apos;,	&apos;303C - US and CA East Fert&apos;,
&apos;304C&apos;,	&apos;304C - US and CA West Fert&apos;,
&apos;640C&apos;,	&apos;640C - IN Andhra Pradesh&apos;,
&apos;641C&apos;,	&apos;641C - IN Haryana&apos;,
&apos;642C&apos;,	&apos;642C - IN Punjab&apos;,
&apos;643C&apos;,	&apos;643C - IN Maharashthra&apos;,
&apos;644C&apos;,	&apos;644C - IN Rajasthan&apos;,
&apos;645C&apos;,	&apos;645C - IN Madyapradesh&apos;,
&apos;646C&apos;,	&apos;646C - IN Uttar Pradesh&apos;,
&apos;647C&apos;,	&apos;647C - IN Gujarat&apos;,
&apos;648C&apos;,	&apos;648C - IN Chhattishgarh&apos;,
&apos;649C&apos;,	&apos;649C - IN Telangana&apos;,
&apos;650C&apos;,	&apos;650C - IN Bihar&apos;,
&apos;651C&apos;,	&apos;651C - IN Karnataka&apos;,
&apos;652C&apos;,	&apos;652C - IN Tamil Nadu&apos;,
&apos;653C&apos;,	&apos;653C - IN Orrisa&apos;,
&apos;654C&apos;,	&apos;654C - IN West Bengal&apos;,
&apos;655C&apos;,	&apos;655C - IN Delhi&apos;,
&apos;656C&apos;,	&apos;656C - IN Himachal Pradesh&apos;,
&apos;657C&apos;,	&apos;657C - IN Kerala&apos;,
&apos;662C&apos;,	&apos;662C - CN HLJ&apos;,
&apos;663C&apos;,	&apos;663C - CN JL&apos;,
&apos;664C&apos;,	&apos;664C - CN LNWN-TSM&apos;,
&apos;665C&apos;,	&apos;665C - CN NW&apos;,
&apos;666C&apos;,	&apos;666C - CN Northeast B2B&apos;,
&apos;667C&apos;,	&apos;667C - CN SD&apos;,
&apos;668C&apos;,	&apos;668C - CN SDW&apos;,
&apos;669C&apos;,	&apos;669C - CN JS&apos;,
&apos;670C&apos;,	&apos;670C - CN HB&apos;,
&apos;671C&apos;,	&apos;671C - CN HN&apos;,
&apos;676C&apos;,	&apos;676C - CN Bend&apos;,
&apos;680C&apos;,	&apos;680C - CN East-B2B&apos;,
&apos;673C&apos;,	&apos;673C - CN Export&apos;,
&apos;674C&apos;,	&apos;674C - CN LN&apos;,
&apos;675C&apos;,	&apos;675C - CN NM&apos;,
&apos;672C&apos;,	&apos;672C - CN Other&apos;,
&apos;677C&apos;,	&apos;677C - CN South&apos;,
&apos;678C&apos;,	&apos;678C - CN Tolling-N&apos;,
&apos;679C&apos;,	&apos;679C - CN Tolling-S&apos;,
&apos;681C&apos;,	&apos;681C - CN White potassium&apos;,
&apos;682C&apos;,	&apos;682C - CN Strategic&apos;,
&apos;683C&apos;,	&apos;683C - CN MrM-SD01&apos;,
&apos;684C&apos;,	&apos;684C - CN MrM-LN01&apos;,
&apos;685C&apos;,	&apos;685C - CN MrM-SX01&apos;,
&apos;690C&apos;,	&apos;690C - HK All Fertilizer&apos;,
&apos;692C&apos;,	&apos;692C - HK All Fertilizers&apos;,
&apos;130&apos;,	&apos;130 - Sales Office 130&apos;,
&apos;140&apos;,	&apos;140 - Sales Office 140&apos;,
&apos;170&apos;,	&apos;170 - Sales Office 170&apos;,
&apos;180&apos;,	&apos;180 - Sales Office 180&apos;,
&apos;290&apos;,	&apos;290 - Sales Office 290&apos;,
	&apos;Invalid Not Found&apos;)</formula>
    <label>Account Sales Office</label>
    <type>Text</type>
</CustomField>