force-app/main/default/objects/Opportunity/fields/PMC_SS_AccountManager__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AccountManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Main point-of-contact/Account Manager working the Opportunity</description>
    <label>Account Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>