force-app/main/default/objects/Opportunity/fields/PMC_SS_ActualCloseDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ActualCloseDate__c</fullName>
    <description>This field tracks the date on which the opportunity is won or not won.</description>
    <label>Actual Close Date</label>
    <type>Date</type>
</CustomField>