force-app/main/default/objects/Opportunity/fields/PMC_SS_AnalysisStageDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_AnalysisStageDate__c</fullName>
    <description>This field will contain the date when opportunity stage will be set to Analysis</description>
    <label>Analysis Stage Date</label>
    <type>Date</type>
</CustomField>