force-app/main/default/objects/Opportunity/fields/PMC_SS_CompetitorName__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CompetitorName__c</fullName>
    <description>Specifies the Competitor Name</description>
    <label>Competitor Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>