force-app/main/default/objects/Opportunity/fields/PMC_SS_CompetitorProduct__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_CompetitorProduct__c</fullName>
    <description>Specifies the Competitor&apos;s Product</description>
    <label>Competitor Product</label>
    <length>255</length>
    <type>Text</type>
</CustomField>