force-app/main/default/objects/Opportunity/fields/PMC_SS_Crop__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Crop__c</fullName>
    <description>Specifies the Competitor&apos;s Crop</description>
    <label>Crop</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>