force-app/main/default/objects/Opportunity/fields/PMC_SS_DaysOpen__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_DaysOpen__c</fullName>
    <description>This field contains the days an opportunity has been opened.</description>
    <formula>TODAY() - DATEVALUE( CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Open</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>