force-app/main/default/objects/Opportunity/fields/PMC_SS_DeliveredRegion__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_DeliveredRegion__c</fullName>
    <description>Specifies the Competitor&apos;s Delivered Region</description>
    <label>Delivered Region</label>
    <length>255</length>
    <type>Text</type>
</CustomField>