force-app/main/default/objects/Opportunity/fields/PMC_SS_Details__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Details__c</fullName>
    <description>Additional details that Sales team can be provide</description>
    <label>Additional Details</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>