force-app/main/default/objects/Opportunity/fields/PMC_SS_Discount__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Discount__c</fullName>
    <description>Specifies the Discount, Competitor is offering</description>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>