force-app/main/default/objects/Opportunity/fields/PMC_SS_LeadType__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_LeadType__c</fullName>
    <description>Type of leads available</description>
    <label>Lead Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Crop Consultant</fullName>
            </value>
            <value>
                <fullName>Grower</fullName>
            </value>
            <value>
                <fullName>Retailer - Agrnomist</fullName>
            </value>
            <value>
                <fullName>Retailer - Decision Maker</fullName>
            </value>
            <value>
                <fullName>Student</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>