force-app/main/default/objects/Opportunity/fields/PMC_SS_LostTo__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_LostTo__c</fullName>
    <description>This field contains the competitor to which an opportunity was lost.</description>
    <label>Lost to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>