force-app/main/default/objects/Opportunity/fields/PMC_SS_MainCompetitors__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_MainCompetitors__c</fullName>
    <description>This field stores the main competitor(s) of the company for this opportunity.</description>
    <label>Main Competitor(s)</label>
    <length>100</length>
    <type>Text</type>
</CustomField>