force-app/main/default/objects/Opportunity/fields/PMC_SS_NeedsEndsDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_NeedsEndsDate__c</fullName>
    <description>Timeline in which customer needs products ends</description>
    <label>Needs End Date</label>
    <type>Date</type>
</CustomField>