force-app/main/default/objects/Opportunity/fields/PMC_SS_NeedsStartDate__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_NeedsStartDate__c</fullName>
    <description>Timeline in which customer needs products starts</description>
    <label>Needs Start Date</label>
    <type>Date</type>
</CustomField>