force-app/main/default/objects/Opportunity/fields/PMC_SS_OpportunitySource__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_OpportunitySource__c</fullName>
    <description>This is the source of the Opportunity to indicate where the Opportunity comes from.</description>
    <label>Opportunity Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cold Call</fullName>
            </value>
            <value>
                <fullName>Company Inbox</fullName>
            </value>
            <value>
                <fullName>Cross-Selling - Aftermarket</fullName>
            </value>
            <value>
                <fullName>Cross-Sellin - Rental</fullName>
            </value>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Personal Visit</fullName>
            </value>
            <value>
                <fullName>Phone Call</fullName>
            </value>
            <value>
                <fullName>Public Relation</fullName>
            </value>
            <value>
                <fullName>Recommendation</fullName>
            </value>
            <value>
                <fullName>Trade Show</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>