force-app/main/default/objects/Opportunity/fields/PMC_SS_Price__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Price__c</fullName>
    <description>Specifies the Competitor&apos;s Price</description>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>