force-app/main/default/objects/Opportunity/fields/PMC_SS_PrimaryContact__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_PrimaryContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Main point-of-contact at the Customer</description>
    <inlineHelpText>This field will only show ACTIVE contacts. Inactive contacts can be accessed from Global Search.</inlineHelpText>
    <label>Primary Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.PMC_SS_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>