force-app/main/default/objects/Opportunity/fields/PMC_SS_ProductFamilies__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ProductFamilies__c</fullName>
    <description>Indicates the product families of the Opportunity</description>
    <label>Product Families</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PMC_SS_ProductFamilies</valueSetName>
    </valueSet>
</CustomField>