force-app/main/default/objects/Opportunity/fields/PMC_SS_ReasonLost__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_ReasonLost__c</fullName>
    <description>This is the reason why the Opportunity was lost.</description>
    <label>Reason Lost</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>StageName</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Delivery Timing</fullName>
            </value>
            <value>
                <fullName>Desired Product Unavailable</fullName>
            </value>
            <value>
                <fullName>Discovery</fullName>
            </value>
            <value>
                <fullName>Incorrect Season</fullName>
            </value>
            <value>
                <fullName>Insufficient Customer Credit</fullName>
            </value>
            <value>
                <fullName>Lack of Data</fullName>
            </value>
            <value>
                <fullName>Lost Funding</fullName>
                <isActive>false</isActive>
                <label>Lost Funding</label>
            </value>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>Misexecution</fullName>
            </value>
            <value>
                <fullName>No Budget</fullName>
                <isActive>false</isActive>
                <label>No Budget</label>
            </value>
            <value>
                <fullName>No Budget / Lost Funding</fullName>
            </value>
            <value>
                <fullName>No Decision / Non-Responsive</fullName>
            </value>
            <value>
                <fullName>No Longer Interested</fullName>
            </value>
            <value>
                <fullName>No Quotation</fullName>
            </value>
            <value>
                <fullName>Not Ready For Purchase</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Performance</fullName>
            </value>
            <value>
                <fullName>Price</fullName>
            </value>
            <value>
                <fullName>Price - too high in comparison to competitor product</fullName>
            </value>
            <value>
                <fullName>Price - too high in current market</fullName>
            </value>
            <value>
                <fullName>Price - too high overall</fullName>
            </value>
            <value>
                <fullName>Product Unable to Meet Customer Needs</fullName>
            </value>
            <value>
                <fullName>Will Consider Next Season</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>