force-app/main/default/objects/Opportunity/fields/PMC_SS_RegionalManager__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_RegionalManager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Regional Manager of the Lead</description>
    <label>Regional Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>