force-app/main/default/objects/Opportunity/fields/PMC_SS_SalesAgreement__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SalesAgreement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Agreement</label>
    <referenceTo>SalesAgreement</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>