force-app/main/default/objects/Opportunity/fields/PMC_SS_Season__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_Season__c</fullName>
    <description>Specifies the Competitor&apos;s Season</description>
    <label>Season</label>
    <length>255</length>
    <type>Text</type>
</CustomField>