force-app/main/default/objects/Opportunity/fields/PMC_SS_SMSOptOut__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_SMSOptOut__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates SMS opt out.</description>
    <label>SMS Opt out</label>
    <type>Checkbox</type>
</CustomField>