force-app/main/default/objects/Opportunity/fields/PMC_SS_UnplannedPurchase__c.field-meta.xml
<CustomField>
    <fullName>PMC_SS_UnplannedPurchase__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this field is checked, the Opportunity is considered an Unplanned Purchase</description>
    <inlineHelpText>When this field is checked, the Opportunity is considered an Unplanned Purchase</inlineHelpText>
    <label>Unplanned Purchase</label>
    <type>Checkbox</type>
</CustomField>