force-app/main/default/objects/Opportunity/recordTypes/PMC_SS_Opportunity.recordType-meta.xml
<RecordType>
    <fullName>PMC_SS_Opportunity</fullName>
    <active>true</active>
    <businessProcess>Opportunity Process</businessProcess>
    <description>Default Opportunity Record Type</description>
    <label>Opportunity</label>
</RecordType>