force-app/main/default/objects/Opportunity/validationRules/Opportunity_Owner_change.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Owner_change</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISCHANGED(OwnerId),
    $Profile.Name = &quot;PMC Marketing User&quot;
)</errorConditionFormula>
    <errorMessage>PMC Marketing User&apos;s can&apos;t change Opportunity Owner</errorMessage>
</ValidationRule>