force-app/main/default/objects/Opportunity/validationRules/PMC_SS_RestrictOppForNonSoldToAccounts.validationRule-meta.xml
<ValidationRule>
    <fullName>PMC_SS_RestrictOppForNonSoldToAccounts</fullName>
    <active>true</active>
    <description>Validation rule to block the creation of opportunity when account type is Ship-to, Bill-to or Payer.</description>
    <errorConditionFormula>AND(
    NOT( 
    $Setup.PMC_ProcessSwitches__c.PMC_BypassValidationRule__c 
    ),
    AND(
        Account.RecordType.DeveloperName == &apos;PMC_SS_Customer&apos;,
        OR(
            ISPICKVAL(Account.Type, &apos;Ship-to&apos;),
            ISPICKVAL(Account.Type, &apos;Bill-to&apos;),
            ISPICKVAL(Account.Type, &apos;Payer&apos;)
        )
    )
)</errorConditionFormula>
    <errorMessage>Only Sold-to Accounts can have Opportunities. Please select a Sold-to Account to create an Opportunity.</errorMessage>
</ValidationRule>