force-app/main/default/objects/Opportunity/listViews/PMC_SS_OpportunitiesMissingActivities.listView-meta.xml
<ListView>
    <fullName>PMC_SS_OpportunitiesMissingActivities</fullName>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>notEqual</operation>
        <value>Closed Won,Closed Lost</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.LAST_UPDATE</field>
        <operation>lessThan</operation>
        <value>LAST_N_DAYS:4</value>
    </filters>
    <label>Opportunities Missing Activities</label>
</ListView>