force-app/main/default/objects/Opportunity/listViews/Pre_Sales_Opportunities.listView-meta.xml
<ListView>
    <fullName>Pre_Sales_Opportunities</fullName>
    <booleanFilter>1 or 2</booleanFilter>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.QUANTITY</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.NAME</field>
        <operation>contains</operation>
        <value>Pre sales</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.NAME</field>
        <operation>contains</operation>
        <value>pre-sales</value>
    </filters>
    <label>Pre-Sales Opportunities</label>
    <sharedTo>
        <role>PMC_SA_B2CSalesTeam</role>
    </sharedTo>
</ListView>